--- a/semangatkerja.html
+++ b/semangatkerja.html
@@ -23,7 +23,7 @@
     </div>
   
       <div class="row" >
-        <div class="teks1">SEBELUM SCROLL FYI INI ALLAY SO KALO GAK MAU MUAL CUKUP SAMPE FOTO KEDUA AJA YA DAPIT</div>
+        <div class="teks1"><p>SEBELUM SCROLL FYI INI ALLAY SO KALO GAK MAU MUAL CUKUP SAMPE FOTO KEDUA AJA YA DAPIT</p></div>
       </div>
     </div>
 
@@ -34,7 +34,7 @@
     </div>
 
     <div class="row" >
-      <div class="teks1"><h2>SEMANGAT KERJA DAPIT ROGER WAGIU!</h2><br>KOLOSE 3:23 <br> Apapun juga yang kamu perubat, peruatlah dengan segenap hatimu seperti untuk Tuhan dan bukan untuk manusia</div>
+      <div class="teks1"><p><h2>SEMANGAT KERJA DAPIT ROGER WAGIU!</h2><br>KOLOSE 3:23 <br> Apapun juga yang kamu perubat, peruatlah dengan segenap hatimu seperti untuk Tuhan dan bukan untuk manusia</p></div>
     </div>
     </div>
 
