--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="row" >
-        <div class="teks2">SEGALA SESUATU YANG DIJUMPAI TANGANMU UNTUK DIKERJAKAN, KERJAKANLAH ITU SEKUAT TENAGA, KARENA TIDAK ADA PEKERJAAN, PERTIMBANGAN, DAN PENGETAHUAN DALAM DUNIA ORANG MATI, KEMANA ENGKAU AKAN PERGI</a></div>
+        <div class="teks2"><p>SEGALA SESUATU YANG DIJUMPAI TANGANMU UNTUK DIKERJAKAN, KERJAKANLAH ITU SEKUAT TENAGA, KARENA TIDAK ADA PEKERJAAN, PERTIMBANGAN, DAN PENGETAHUAN DALAM DUNIA ORANG MATI, KEMANA ENGKAU AKAN PERGI</p></a></div>
       </div>
 
       <div class="teks5">
