--- a/MENGJIJIKAN.HTML
+++ b/MENGJIJIKAN.HTML
@@ -69,6 +69,14 @@
         src="photo/3.jpeg" alt="" style="display:block; margin:auto;" width="30%" height="30%" >
         <div class="teks1">sorry websitenya jelek terkesan agak nd niat juga bikinnya cepat cepat nd sempat beking css, jangan diroasting ya tp website abal2 ini. soalnya berharap ini bisa lumayan membantu anda ya kalo nggak juga bersyukur setidaknya ng spent time for baca kata2 nd jelas ini awoakawokawaok intinya sekli lagi SEMANGAT KERJA DAN MELEWATI HARI HARI YANG BERAT KEDEPANNYA SEMUANYA PASTI CEPAT SELESAI KOK, SEE YOU AS SOON AS POSIBLE YA, YA LYUBLYU TEBYA</div>
     </div>
+  
+  <div class="container-fluid header">  
+        <br> 
+        <img class="img1"
+        <div class="teks1">Anyway mode serius on awokawokawok<br>nda usah terlalu memikirkan kita ya, dan juga kalo nga dekat dengan orang lain juga it's okay bang karena itu hak mu. intinya adalah saya cuma berharap ng memiliki kehidupan yang nyaman take care for anything</div>
+    <P class="teks1"> don't want you terjebak dengan orang yang seperti kita:v 
+    </p>  
+  </div>
 
     
 
