--- a/MENGJIJIKAN.HTML
+++ b/MENGJIJIKAN.HTML
@@ -72,8 +72,7 @@
   
   <div class="container-fluid header">  
         <br> 
-        <img class="img1"
-        <div class="teks1">Anyway mode serius on awokawokawok<br>nda usah terlalu memikirkan kita ya, dan juga kalo nga dekat dengan orang lain juga it's okay bang karena itu hak mu. intinya adalah saya cuma berharap ng memiliki kehidupan yang nyaman take care for anything</div>
+        <p class="teks1">Anyway mode serius on awokawokawok<br>nda usah terlalu memikirkan kita ya, dan juga kalo nga dekat dengan orang lain juga it's okay bang karena itu hak mu. intinya adalah saya cuma berharap ng memiliki kehidupan yang nyaman take care for anything</p>
     <P class="teks1"> don't want you terjebak dengan orang yang seperti kita:v 
     </p>  
   </div>
