--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       </div>
 
       <div class="row row1" >
-        <div class="teks3" style="display:block; margin:auto;">PENGKHOTBAH 9:10</a></div>
+        <div class="teks3" style="display:block; margin:auto;"><p class="teks1">PENGKHOTBAH 9:10</a></div>
       </div>
 
       <div class="row" >
-        <div class="teks2"><p>SEGALA SESUATU YANG DIJUMPAI TANGANMU UNTUK DIKERJAKAN, KERJAKANLAH ITU SEKUAT TENAGA, KARENA TIDAK ADA PEKERJAAN, PERTIMBANGAN, DAN PENGETAHUAN DALAM DUNIA ORANG MATI, KEMANA ENGKAU AKAN PERGI</p></a></div>
+        <div class="teks2"><p class="teks1">SEGALA SESUATU YANG DIJUMPAI TANGANMU UNTUK DIKERJAKAN, KERJAKANLAH ITU SEKUAT TENAGA, KARENA TIDAK ADA PEKERJAAN, PERTIMBANGAN, DAN PENGETAHUAN DALAM DUNIA ORANG MATI, KEMANA ENGKAU AKAN PERGI</p></div>
       </div>
 
       <div class="teks5">
