--- a/MENGJIJIKAN.HTML
+++ b/MENGJIJIKAN.HTML
@@ -16,9 +16,9 @@
             <img class="img1"
             src="photo/me3KATA.jpg" alt="" style="display:block; margin:auto;" width="30%" height="30%" >
 
-
-        <p class="teks9"><h2>WELKAMBEK DAPIT ROGER WAGIU!</h2><br>YESAYA 41:10 <br> Janganlah takut, sebab Aku menyertai engkau, janganlah bimbang, sebab Aku ini Allahmu; Aku akan meneguhkan, bahkan akan menolong engkau; Aku akan memegang engkau dengan tangan kanan-Ku yang membawa kemenangan.</p>
-  
+        <div class="teks1">
+          <p class="teks9"><h2>WELKAMBEK DAPIT ROGER WAGIU!</h2><br>YESAYA 41:10 <br> Janganlah takut, sebab Aku menyertai engkau, janganlah bimbang, sebab Aku ini Allahmu; Aku akan meneguhkan, bahkan akan menolong engkau; Aku akan memegang engkau dengan tangan kanan-Ku yang membawa kemenangan.</p>
+        </div>
      </div>
 
     <div class="container-fluid header"> 
